# FindAngle

./: CMakeLists.txt  README.md  SvgLoader.cpp  SvgLoader.h  Triangle.cpp  Triangle.hpp  main.cpp  mainwindow.cpp  mainwindow.h
